--- a/2018/09/ARTS-2018-09-16.md
+++ b/2018/09/ARTS-2018-09-16.md
@@ -1,7 +1,321 @@
 
  [Algorithm](#algorithm)
 
- [Review](#review)
+ [Review Java并发包线程池的源码实现分析](#review)
+
+
+![image](https://itimetraveler.github.io/gallery/java-common/20150716165059215.jpg)
+上篇文章我们已经详细介绍了线程池相关的设计和概念，本篇我们从源码角度分析一下：
+
+首先从Java线程池提交submit方法说起，其支持两种任务类型：
+
+Callable 有返回值参数
+
+Runnable 无返回值参数
+
+Java的Thread的对象是实现了Runnable接口，如果你传入的是Runnable接口，那么在执行了线程的start方法后，会启动一个新的线程，然后在调用Runnable的run方法，注意这里你直接调用Runnable的run方法，就相当于调了一个普通方法不会产生新的线程，run方法你可以调用多次，如果想启动新线程必须通过Thread对象的start方法启动，注意start方法只能调用一次，再次调用会抛出不合法状态异常。
+
+
+Callable是专门为线程池任务定制的一个类，该类可以拥有返回值，任何异步线程结果的获取，java的Thread类可以运行一个Runnable接口的实例，但是不能直接运行Callable接口的实例，所以线程池做了封装适配，在ThreadPoolExecutor类的父类AbstractExecutorService里面，提供了两个重载的submit方法：
+
+
+```
+    public <T> Future<T> submit(Runnable task) {
+        if (task == null) throw new NullPointerException();
+        RunnableFuture<T> ftask = newTaskFor(task, result);
+        execute(ftask);
+        return ftask;
+    }
+
+    public <T> Future<T> submit(Callable<T> task) {
+        if (task == null) throw new NullPointerException();
+        RunnableFuture<T> ftask = newTaskFor(task);
+        execute(ftask);
+        return ftask;
+    }
+```
+
+在这里面我们看到通过newTaskFor方法进行了归一转化，进入方法后是通过new FutureTask方法来处理，继续看源码：
+发现在下面的代码里，最终无论是callable还是runnable都会被转成callable对象实例：
+
+```
+	public FutureTask(Callable<V> callable) {
+        if (callable == null)
+            throw new NullPointerException();
+        this.callable = callable;
+        this.state = NEW;       // ensure visibility of callable
+    }
+
+    public FutureTask(Runnable runnable, V result) {
+        this.callable = Executors.callable(runnable, result);
+        this.state = NEW;       // ensure visibility of callable
+    }
+```
+其中Executors.callable(runnable, result)方法，我们接着进去能够看到，通过了一个适配器的类来
+将Runnable任务包装成了Callable任务，并在call方法里面调用了Runnable的run方法：
+
+```
+    static final class RunnableAdapter<T> implements Callable<T> {
+        final Runnable task;
+        final T result;
+        RunnableAdapter(Runnable task, T result) {
+            this.task = task;
+            this.result = result;
+        }
+        public T call() {
+            task.run();
+            return result;
+        }
+    }
+```
+
+
+这样以来在包装后返回的类是FutureTask类，这个类又是RunnableFuture接口的子类，提供异步任务获取结果的功能，此外还有取消任务，判断任务是否结束，get阻塞等待任务结果功能等，而RunnableFuture接口
+又同时继承了Runnable和Future接口，在FutureTask这个里面又重写了run方法，而在run方法里面又调用了刚才
+统一成Callable接口的call方法，至此就可以使用RunnableFuture接口，来通过线程运行不管是来自Callable提交的任务还是Runnable提交的任务。
+
+```
+    public void run() {
+        if (state != NEW ||
+            !UNSAFE.compareAndSwapObject(this, runnerOffset,
+                                         null, Thread.currentThread()))
+            return;
+        try {
+            Callable<V> c = callable;
+            if (c != null && state == NEW) {
+                V result;
+                boolean ran;
+                try {
+                   //统一调用call
+                    result = c.call();
+                    ran = true;
+                } catch (Throwable ex) {
+                    result = null;
+                    ran = false;
+                    setException(ex);
+                }
+                if (ran)
+                    //设置回调结果
+                    set(result);
+            }
+        } finally {
+            // runner must be non-null until state is settled to
+            // prevent concurrent calls to run()
+            runner = null;
+            // state must be re-read after nulling runner to prevent
+            // leaked interrupts
+            int s = state;
+            if (s >= INTERRUPTING)
+                handlePossibleCancellationInterrupt(s);
+        }
+    }
+```
+
+ok，前面的这些步骤把提交的任务进行了归一化转成了Runnable接口的子类，FutureTask并重写了其run方法，接着我们继续看核心方法execute(Runnable command)，这个方法时提交执行任务的关键：
+
+
+```
+        int c = ctl.get();
+        if (workerCountOf(c) < corePoolSize) {
+            if (addWorker(command, true))
+                return;
+            c = ctl.get();
+        }
+        if (isRunning(c) && workQueue.offer(command)) {
+            int recheck = ctl.get();
+            if (! isRunning(recheck) && remove(command))
+                reject(command);
+            else if (workerCountOf(recheck) == 0)
+                addWorker(null, false);
+        }
+        else if (!addWorker(command, false))
+            reject(command);
+    }
+```
+
+这个方法主要干三件事：
+
+（1）先判断当前的线程池的数量是否小于corePoolSize，如果是，就调用addWorker尝试新启动一个线程，并把新线程加入线程池中workers，源码里是通过HashSet保存线程池的：
+
+```
+    private final HashSet<Worker> workers = new HashSet<Worker>();
+```
+
+这里的关键是Worker类，其继承了AQS并实现了Runnable接口
+
+```
+Worker extends AbstractQueuedSynchronizer implements Runnable
+```
+
+核心成员属性：
+
+```
+       //每个Worker维持一个线程，用来执行任务
+       final Thread thread;
+       //提交的任务会被放这里
+        Runnable firstTask;
+```
+
+构造方法，用来创建核心线程，也就是说资源池里面的线程
+是通过这个方法创建的。
+
+```
+     Worker(Runnable firstTask) {
+            setState(-1); // inhibit interrupts until runWorker
+            this.firstTask = firstTask;
+            this.thread = getThreadFactory().newThread(this);
+        }
+```
+核心执行任务的方法：
+
+```
+   public void run() {
+            runWorker(this);
+        }
+```
+
+这个方法委托外部的ThreadPoolExecutor的来执行：
+
+```
+   final void runWorker(Worker w) {
+        Thread wt = Thread.currentThread();
+        Runnable task = w.firstTask;
+        w.firstTask = null;
+        w.unlock(); // allow interrupts
+        boolean completedAbruptly = true;
+        try {
+            while (task != null || (task = getTask()) != null) {
+                w.lock();
+                // If pool is stopping, ensure thread is interrupted;
+                // if not, ensure thread is not interrupted.  This
+                // requires a recheck in second case to deal with
+                // shutdownNow race while clearing interrupt
+                if ((runStateAtLeast(ctl.get(), STOP) ||
+                     (Thread.interrupted() &&
+                      runStateAtLeast(ctl.get(), STOP))) &&
+                    !wt.isInterrupted())
+                    wt.interrupt();
+                try {
+                    beforeExecute(wt, task);
+                    Throwable thrown = null;
+                    try {
+                        task.run();
+                    } catch (RuntimeException x) {
+                        thrown = x; throw x;
+                    } catch (Error x) {
+                        thrown = x; throw x;
+                    } catch (Throwable x) {
+                        thrown = x; throw new Error(x);
+                    } finally {
+                        afterExecute(task, thrown);
+                    }
+                } finally {
+                    task = null;
+                    w.completedTasks++;
+                    w.unlock();
+                }
+            }
+            completedAbruptly = false;
+        } finally {
+            processWorkerExit(w, completedAbruptly);
+        }
+    }
+```
+这个方法就是真正执行任务的方法，方法里面会取刚在Worker里面里面的firstTask来执行，当然执行会判断线程池是否关闭，打断，停止了。并且我们上篇文章提到的beforeExecute和
+afterExecute的类似AOP的切面方法，在这里面能够非常清楚的看到，中间执行的是task.run()方法，而task.run()指的是文章开头我们提到的经过归一化后的FutureTask的run方法，这样以来实际执行的就是我们向线程中通过sumbit方法提交的Runnable任务或者时Callable任务。
+
+注意如果是核心线程的，那么第一次执行的是与自己绑定的firstTask任务，如果核心线程已经满了，新来的任务是会被加入到阻塞队列里面，这个方法会一直循环，先把自己的firstTask处理完毕之后，然后不断的通过getTask方法从阻塞队列里面取任务执行。
+
+```
+    private Runnable getTask() {
+        boolean timedOut = false; // Did the last poll() time out?
+
+        for (;;) {
+            int c = ctl.get();
+            int rs = runStateOf(c);
+
+            // Check if queue empty only if necessary.
+            if (rs >= SHUTDOWN && (rs >= STOP || workQueue.isEmpty())) {
+                decrementWorkerCount();
+                return null;
+            }
+
+            int wc = workerCountOf(c);
+
+            // Are workers subject to culling?
+            boolean timed = allowCoreThreadTimeOut || wc > corePoolSize;
+
+            if ((wc > maximumPoolSize || (timed && timedOut))
+                && (wc > 1 || workQueue.isEmpty())) {
+                if (compareAndDecrementWorkerCount(c))
+                    return null;
+                continue;
+            }
+
+            try {
+
+                Runnable r = timed ?
+                    workQueue.poll(keepAliveTime, TimeUnit.NANOSECONDS) :
+                    workQueue.take();
+                if (r != null)
+                    return r;
+                timedOut = true;
+            } catch (InterruptedException retry) {
+                timedOut = false;
+            }
+        }
+    }
+```
+这个方法里面也会判断各种情况，如空队列，任务超时等，符合条件时会通过take方法取出任务执行。哈哈，第一件事扯的有点多，我们接着看execute(Runnable)方法
+
+```
+        //第一件事
+        int c = ctl.get();
+        if (workerCountOf(c) < corePoolSize) {
+            if (addWorker(command, true))
+                return;
+            c = ctl.get();
+        }
+        //第二件事
+        if (isRunning(c) && workQueue.offer(command)) {
+            int recheck = ctl.get();
+            if (! isRunning(recheck) && remove(command))
+                reject(command);
+            else if (workerCountOf(recheck) == 0)
+                addWorker(null, false);
+        }
+        //第三件事
+        else if (!addWorker(command, false))
+            //拒绝策略
+            reject(command);
+    }
+```
+第二件事其实比较简单，就是当核心线程都在运行任务的时候，新来的任务会被插入到阻塞队列等后执行，比如当前线程池有5个线程同时都在工作，你新来的任务没有线程处理，就先到队列里面等待，只要这个5个线程里面任何一个线程处理完毕都会取阻塞队列里面去任务执行，当然这里面在插入队列后，会再次检查，因为在这里期间线程池里面可能有任务执行完了，或者线程池被关闭了等。
+
+
+第三件事，如果走到这里就说明核心线程满了，队列也满了（有界限队列比较容易满），然后判断线程池的数量是否超过maximumPoolSize，如果没有，就继续创建新的线程处理任务，如果超过了，这个时候就会执行对应的拒绝策略，是选择直接抛出异常，还是直接丢弃？ 或者放弃头部的任务，尝试执行新来的任务，最后或者是直接使用caller访问者的线程来执行任务。
+
+这里需要注意的是多余核心线程池之外的创建的线程数量，可以根据一定的存活时间来回收，但核心线程一般不建议回收。
+
+
+此外还有是三个方法，我们需要了解一下：
+
+```
+shutdown()
+shutdownNow()
+awaitTermination()
+```
+这三个方法在上篇文章中已经详细介绍过了，这里简单提下，
+第一个方法，执行之后不会再接受新提交任务，会把当前运行的任务和队列里面的等待的任务处理完之后关闭，第二个方法会发送线程的中断通知，允许线程自己优雅关闭，但如果你忽略了中断信号，那么作用和第一个方法一样。
+
+第三个方法非常有用，因为前两个方法并不是阻塞执行的，也就是说调用之后立刻返回，当此时线程池不一定结束，你可以采用第三个方法用来阻塞指定的时间再次判断是否结束，从而可以做一些事情，比如超时强制退出什么的，或者继续等待。
+
+
+
+总结:
+
+本篇文章主要对线程池的核心工作机制进行了源码分析和介绍，与我们上篇提到的介绍内容一致，看源码是次要的，主要的目的是我们可以学习和借鉴这种设计和实现思想，从而可以更好的应用在工作中。
+
 
  [Technique 理解Java并发工具包线程池的设计](#technique)
  
