--- a/2018/09/ARTS-2018-09-16.md
+++ b/2018/09/ARTS-2018-09-16.md
@@ -1,5 +1,32 @@
 
- [Algorithm](#algorithm)
+ [Algorithm 删除链表里面的指定的值](#algorithm)
+ Remove Linked List Elements
+ ```
+      //采用一个虚拟的头节点
+      ListNode fakeHead=new ListNode(-1);
+
+      //它的下一个节点是head
+      fakeHead.next=head;
+      //head作为当前节点
+      ListNode curr=head;
+      //设置虚拟节点为上一个节点
+      ListNode prev=fakeHead;
+
+      while(curr!=null) {
+          //如果当前的值等于要删除的值
+          if (curr.val == val) {
+              //把虚拟头节点的next指为当前的下一个,不切换引用继续循环
+              prev.next = curr.next;
+          } else {
+              //否则就把虚拟头节点指向下一个节点，代表前面的值没有要删除的
+              prev=prev.next;
+          }
+          //切换当前节点的引用为下一个
+          curr=curr.next;
+      }
+
+      head=fakeHead.next;
+ ```
 
  [Review Java并发包线程池的源码实现分析](#review)
 
