--- a/2018/09/ARTS-2018-09-16.md
+++ b/2018/09/ARTS-2018-09-16.md
@@ -1,5 +1,13 @@
 
  [Algorithm 删除链表里面的指定的值](#algorithm)
+
+ [Review：理解Java7和8里面HashMap+ConcurrentHashMap的扩容策略](#review)
+
+ [Technique：理解Java8并发工具类ConcurrentHashMap的实现](#technique)
+
+ [Share：理解另类的并发安全实现CopyOnWriteArrayList ](#share)
+
+ # Algorithm
  Remove Linked List Elements
  ```
       //采用一个虚拟的头节点
@@ -28,7 +36,7 @@
       head=fakeHead.next;
  ```
 
- [Review Java并发包线程池的源码实现分析](#review)
+ # Review
 
 
 ![image](https://itimetraveler.github.io/gallery/java-common/20150716165059215.jpg)
@@ -344,7 +352,7 @@ awaitTermination()
 本篇文章主要对线程池的核心工作机制进行了源码分析和介绍，与我们上篇提到的介绍内容一致，看源码是次要的，主要的目的是我们可以学习和借鉴这种设计和实现思想，从而可以更好的应用在工作中。
 
 
- [Technique 理解Java并发工具包线程池的设计](#technique)
+ # Technique
  
  ### 为什么需要线程池？ 
  
@@ -726,19 +734,9 @@ awaitTermination()
  
 
 
- [Share spark技术介绍](#share)
-
-
-# Algorithm
-
-
-# Review
-
-
-# Technique
-
-
 # Share
+
+
 
 
 （一）Apache Spark是什么？
