增加arts算法调整格式

--- a/2018/09/ARTS-2018-09-16.md
+++ b/2018/09/ARTS-2018-09-16.md
@@ -1,5 +1,5 @@
 
- [Algorithm 删除链表里面的指定的值](#algorithm)
+ [Algorithm： 删除链表里面的指定的值](#algorithm)
 
  [Review：理解Java7和8里面HashMap+ConcurrentHashMap的扩容策略](#review)
 
