--- a/2018/09/ARTS-2018-09-16.md
+++ b/2018/09/ARTS-2018-09-16.md
@@ -1,11 +1,11 @@
 
  [Algorithm： 删除链表里面的指定的值](#algorithm)
 
- [Review：理解Java7和8里面HashMap+ConcurrentHashMap的扩容策略](#review)
+ [Review：Java并发包线程池的源码实现分析](#review)
 
- [Technique：理解Java8并发工具类ConcurrentHashMap的实现](#technique)
+ [Technique：理解Java并发工具包线程池的设计](#technique)
 
- [Share：理解另类的并发安全实现CopyOnWriteArrayList ](#share)
+ [Share：Spark入门基础知识 ](#share)
 
  # Algorithm
  Remove Linked List Elements
