--- a/2018/09/ARTS-2018-09-23.md
+++ b/2018/09/ARTS-2018-09-23.md
@@ -1,7 +1,7 @@
 
- [Algorithm](#algorithm)
+ [Algorithm  判断链表是否有环 ](#algorithm)
 
- [Review](#review)
+ [Review 一网打尽Java所有的并发知识](#review)
 
  [Technique Java并发工具包之CompletionService类实现分析](#technique)
 
@@ -10,8 +10,28 @@
 
 # Algorithm
 
+```
+    public static boolean hasCycle(ListNode head){
+
+        ListNode  solw=head;
+        ListNode  fast=head;
+
+        while (fast!=null&&fast.next!=null){
+            solw=solw.next;
+            fast=fast.next.next;
+            if(solw==fast) return true;
+        }
+
+        return false;
+
+
+    }
+```
+
 
 # Review
+
+![image](https://github.com/qindongliang/Java-Note/blob/master/src/main/resources/pic/Java并发知识全景.png)
 
 
 # Technique
