--- a/2018/09/ARTS-2018-09-30.md
+++ b/2018/09/ARTS-2018-09-30.md
@@ -1,5 +1,5 @@
 
- [Algorithm](#algorithm)
+ [Algorithm 判断单向链表是否是回文结构](#algorithm)
 
  [Review 理解JVM垃圾回收的机制](#review)
 
@@ -10,8 +10,62 @@
 
 # Algorithm
 
+```
+
+    public boolean isPalindrome(){
+
+        ListNode solw=head;
+
+        ListNode fast=head;
+
+        while (fast!=null&&fast.next!=null){
+            solw=solw.next;
+            fast=fast.next.next;
+        }
+
+        if(fast!=null){
+            solw=solw.next;
+        }
+
+        solw=reverse(solw);//反转剩下的部分
+        fast=head;
+
+        while (solw!=null){
+            if(fast.val!=solw.val){
+                return false;
+            }
+            fast=fast.next;
+            solw=solw.next;
+        }
+
+
+
+        return true;
+    }
+    
+    
+    //反转实现
+    
+      private ListNode reverse(ListNode head){
+    
+          ListNode tmp=head;
+          ListNode prev=null;
+          ListNode current=null;
+          while (tmp!=null){
+              current =tmp;
+              tmp=tmp.next;
+              current.next=prev;
+              prev=current;
+          }
+          return current;
+    
+      }
+
+```
 
 # Review
+
+
 
 
 ###  前言
