arts20181020增加排序介绍

--- a/2018/10/ARTS-2018-10-20.md
+++ b/2018/10/ARTS-2018-10-20.md
@@ -2,9 +2,12 @@
  [Algorithm 理解桶排序算法原理](#algorithm)
 
 
- [Review](#review)
+ [Review 理解归并排序算法原理 ](#review)
 
- [Technique](#technique)
+
+ [Technique 理解基数排序算法原理](#technique)
+
+
 
  [Share 理解递归算法的原理](#share)
 
@@ -105,9 +108,216 @@
 
 
 # Review
+归并排序（Merge）是创建在归并操作上的一种有效的排序算法，其时间复杂度，最好，最坏，平均都是O(nlogn)，空间复杂度为O(n)，是比较排序里面效率非常稳定的一种排序算法。在1945年由约翰·冯·诺伊曼首次提出。该算法是采用分治法（Divide and Conquer）的一个非常典型的应用，且各层分治递归可以同时进行。
+
+
+图示原理如下：
+
+![image](https://www.geeksforgeeks.org/wp-content/uploads/Merge-Sort-Tutorial.png)
+
+归并排序的实现有递归和迭代两个版本，大多数时候使用递归看起来会更容易理解，所以理解归并排序的关键地方在于理解，其递归分治的思想，如果对于递归算法不熟悉的同学，建议先看我前面递归算法的原理，理解了递归算法，再学习归并排序就会比较容易。
+
+
+下面我们看下归并排序的Java代码实现:
+
+
+```shell
+  public static void mergeSort(int arr[],int start,int end){
+
+        if(start>=end) return;
+        int mid=(start+end)/2;
+        //递归切分.
+        mergeSort(arr,start,mid);
+        mergeSort(arr,mid+1,end);
+
+        //开始归并.
+        int i=0;
+        int first=start;
+        int last=mid+1;
+        //临时数组存放交换排序结果.
+        int []tmp=new int[end-start+1];
+
+        //基于mid中间点的位置，开始合并两个有序数组.
+        while (first<=mid&&last<=end){
+            if(arr[first]<arr[last]){
+                tmp[i++]=arr[first++];//左边的数据小.
+            }else{
+                tmp[i++]=arr[last++];//右边的数据小.
+            }
+        }
+
+        // 第一个while执行过之后，如果符合下面这个.
+        //条件就说明，左边的数组元素还有剩余，现在把剩下的全部拷贝到新的有序数组.
+        while (first<=mid){
+            tmp[i++]=arr[first++];
+        }
+        // 第一个while执行过之后，如果符合下面这个.
+        //条件就说明，右边的数组元素还有剩余，现在把剩下的全部拷贝到新的有序数组.
+        while (last<=end){
+            tmp[i++]=arr[last++];
+        }
+
+        //新排序好的数据归位到，原始数组对应的位置里面.
+        int k=0;
+        while (start<=end){
+            arr[start++]=tmp[k++];
+        }
+
+        }
+
+    public static void main(String[] args) {
+
+        int[] input = {8,9,4,-5,6};
+        System.out.println("排序前："+ Arrays.toString(input));
+        mergeSort(input,0,input.length-1);
+        System.out.println("排序后："+ Arrays.toString(input));
+
+    }
+```
+
+下面分析下代码逻辑：
+
+
+（1）定义一个无序的数组
+
+（2）开始分解子问题，使用数组的（开始下标+结束下标）/ 2得到，切分的中间值
+
+（3）递归处理切分的左半部分数组
+
+（4）递归处理切分的右半部分数组
+
+（5）当任务分解到不能在分解的时候，开始执行比较，合并，并返回一个有序的数组
+
+（6）上面的递归依次返回合并有序的数组
+
+（7）直到把最终的排序问题解决
+
+
+
+这里说一下代码里在递归分解完毕之后的四个while循环的意义：
+
+
+第一个：根据循环的条件，合并两个数组，并把结果集临时输出到一个新的数组里面
+
+第二个：检查第一个合并的数组，是否还有剩余元素没有合并，如果有就拷贝剩下的元素到临时输出的新的数组
+
+第三个：检查第二个合并的数组，是否还有剩余元素没有合并，如果有就拷贝剩下的元素到临时输出的新的数组
+
+第四个：将合并完的有序数组，拷贝到原数组里面这个排序的区间内，从而完成局部排序。
+
+重复上面的四个步骤直到，程序退出时，整个数组就排好顺序了。
+
+
+
+
+总结：
+
+
+本文主要介绍了，归并排序算法的原理和是实现，此外归并排序算法是稳定的，这一点相比同为n(logn)的快速排序来说是一个优点，在使用比较排序要求稳定性的时候，我们应该先考虑到归并排序，如果不要求，那么大多时候快速排序将会是一个不错的选择。
+
 
 
 # Technique
+
+基数排序（Radix sort）是一种非比较型整数排序算法，其原理是将整数按位数切割成不同的数字，然后按每个位数分别比较。由于整数也可以表达字符串（比如名字或日期）和特定格式的浮点数，所以基数排序也不是只能使用于整数。基数排序的发明可以追溯到1887年赫尔曼·何乐礼在打孔卡片制表机（Tabulation Machine）上的贡献。
+
+它是这样实现的：将所有待比较数值（正整数）统一为同样的数字长度，数字较短的数前面补零。然后，从最低位开始，依次进行一次排序。这样从最低位排序一直到最高位排序完成以后，数列就变成一个有序序列。
+
+基数排序的方式可以采用LSD（Least significant digital）或MSD（Most significant digital），LSD的排序方式由键值的最右边开始，而MSD则相反，由键值的最左边开始。最坏时间复杂度O(kN)，最坏空间复杂度O(k+N)，大多数情况下使用的都是LSD，从个位数字开始比较排序。
+
+
+比如现在对一个大于0的整形数组排序：
+
+
+```
+  int a[] = {53, 3, 542, 748, 14, 214, 154, 63, 616};
+```
+
+排序过程如下：
+
+![image](https://images0.cnblogs.com/i/497634/201403/161837176365265.jpg)
+
+下面我们看下在Java代码里面如何实现：
+
+
+```shell
+    private static void radixSort(int []a){
+        System.out.println("排序前："+Arrays.toString(a));
+        int radix=10; //数字从0到9共有10位
+        int exp;
+        int max=a[0];
+        for (int i = 0; i < a.length; i++) {
+            max=Math.max(a[i],max);
+
+        }
+        System.out.println("数组最大值："+max);
+
+        //判断一个整数，有多少位数.
+        //exp=1  对个位排序.
+        //exp=10 对十位排序.
+        //exp=100对白位排序.
+        //......依次类推.
+        for(exp=1;max/exp>0;exp*=10){
+            int output[]=new int[a.length];
+            int radixArr[]=new int[radix];
+            //下面的过程，与计数排序类似.
+            for (int i = 0; i < a.length; i++) {
+                radixArr[a[i]/exp%radix]++;
+            }
+            //求和定位，相对位置.
+            for (int i = 1; i < radix; i++) {
+                radixArr[i]=radixArr[i]+radixArr[i-1];
+            }
+
+            for (int i = a.length-1; i>=0 ; i--) {
+                //得到每个数字在bucket数组里面的位置.
+                int pos=a[i]/exp%radix;
+                //得到其的偏移量.
+                int offset=radixArr[pos];
+                output[offset-1]=a[i];//存放其位置.
+                radixArr[pos]--;//基数自减.
+
+            }
+            System.out.println("%"+exp+"排序后："+Arrays.toString(output));
+            //将排序结果赋值给原数组.
+            a=output;
+
+        }
+
+    }
+```
+
+下面来详细分析下，代码是如何实现的：
+
+（1）首先定义一个无序数组
+
+（2）找到数组里面的最大值
+
+（3）从1开始，每次乘以10来计算，最大值的位数，有多少位就意味着需要迭代几轮
+
+（4）在对应的每一轮中，采用计数排序原理，将无序数组里面的每一位元素，求得对应位置元素，然后放入radix（0-9）数组中。
+
+（5）对radix数组遍历，求和，计算出每一位在原始数组里面的位置。
+
+（6）遍历无序数组，对每一个位置的元素，根据规则计算出新的位置，然后放入新的同等大小的数组里面
+
+（7）放置完毕后，把引用赋值给原始无序数组，代表一轮迭代完毕。
+
+（8）回到4步骤，重复执行，直到把所有的位置的处理完毕，排序就完成了。
+
+
+总结：
+
+本文介绍了基数排序算法的原理和实现，本质上基数排序借助了计数排序来完成了无序数组位置的重新定位，在整个过程中并没有出现任何的比较，所以时间复杂度近似为O(k*n)，其中k=最大数值的位数，n为元素总个数。空间复杂度为O(k+n)，整体来说，是一个比较独特的排序算法。
+
+
+
+
+
+
+
+
+
 
 
 # Share
