添加合并两棵树的算法

--- a/2018/10/ARTS-2018-10-27.md
+++ b/2018/10/ARTS-2018-10-27.md
@@ -1,5 +1,5 @@
 
- [Algorithm](#algorithm)
+ [Algorithm 合并两颗树](#algorithm)
 
  [Review 理解堆排序的原理](#review)
 
@@ -9,6 +9,22 @@
 
 
 # Algorithm
+
+https://leetcode.com/problems/merge-two-binary-trees/
+
+```
+    public TreeNode mergeTrees(TreeNode t1, TreeNode t2) {
+          if(t1==null) return t2;
+     if(t2==null) return t1;
+
+     TreeNode newNode=new TreeNode(t1.val+t2.val);
+     newNode.left=mergeTrees(t1.left,t2.left);
+     newNode.right=mergeTrees(t1.right,t2.right);
+     return  newNode;
+
+    }
+```
+
 
 
 # Review
