--- a/2018/11/ARTS-2018-11-11.md
+++ b/2018/11/ARTS-2018-11-11.md
@@ -1,5 +1,5 @@
 
- [Algorithm](#algorithm)
+ [Algorithm 二叉树的深度查询](#algorithm)
 
  [Review](#review)
 
@@ -10,6 +10,112 @@
 
 # Algorithm
 
+leetcode序号104
+递归版本：
+```
+   public static int recursionMaxDeepLength(TreeNode root){
+        if(root==null) return 0;
+       int leftLen= recursionMaxDeepLength(root.leftChild)+1;//左子树统计
+       int rightLen= recursionMaxDeepLength(root.rightChild)+1;//右子树统计
+       return Math.max(leftLen,rightLen);
+
+    }
+```
+
+深度优先遍历-迭代版本（DFS）
+```
+    public static void dfsMaxDepth(TreeNode root){
+
+        if(root==null){
+            System.out.println("深度=0");
+        }
+
+
+        Stack<TreeNode> stack=new Stack<>();
+
+        Stack<Integer>  value=new Stack<>();
+
+        stack.push(root);
+
+        value.push(1);
+
+        int max=0;
+//        System.out.println(stack+"  "+value);
+
+        while (!stack.isEmpty()){
+            System.out.println(stack+"   "+value);
+            TreeNode node=stack.pop();//出栈
+            int temp=value.pop();
+
+            max=Math.max(temp,max);//得到最大值
+
+            if(node.leftChild!=null){
+                stack.push(node.leftChild);
+                value.push(temp+1);
+            }
+
+
+            if(node.rightChild!=null){
+                stack.push(node.rightChild);
+                value.push(temp+1);
+            }
+
+//            System.out.println(value);
+
+        }
+
+
+        System.out.println("max deep length："+max);
+
+
+    }
+```
+
+广度优先版本-BFS(迭代版本)
+
+```
+
+    public static void bfsMaxDepth(TreeNode root){
+
+        if(root==null){
+            System.out.println("root is null");
+        }
+
+        Queue<TreeNode> queue=new LinkedList<>();
+        queue.offer(root);
+        int count=0;
+
+        while (!queue.isEmpty()){
+
+            int size=queue.size();
+
+            while (size>0){
+
+                TreeNode node=queue.poll();// remove the head of this queue
+
+                if(node.leftChild!=null){
+                    queue.offer(node.leftChild);
+                }
+
+                if(node.rightChild!=null){
+                    queue.offer(node.rightChild);
+                }
+
+
+                size=size-1;
+            }
+
+            count=count+1;
+
+        }
+
+
+        System.out.println("bfs-max-depth: "+count);
+
+
+
+    }
+```
 
 # Review
 
