20181118arts提交share的文章

--- a/2018/11/ARTS-2018-11-18.md
+++ b/2018/11/ARTS-2018-11-18.md
@@ -6,7 +6,7 @@
 
  [Technique](#technique)
 
- [Share](#share)
+ [Share Mac系统更换brew源的方法](#share)
 
 
 # Algorithm
@@ -20,6 +20,31 @@
 
 # Share
 
+
+
+如果在使用brew安装软件的时候，特别慢，可以重新换个brew的下载源，有点类似yum的机制：
+
+如果已经卡住了，请按Ctrl+C退出，mac上注意看好是control，别按成Command+C了，我就犯了这低级错误
+。
+
+```
+# 进入brew主目录
+$ cd `brew --repo`
+
+# 更换镜像
+$ git remote set-url origin https://git.coding.net/homebrew/homebrew.git
+
+# 测试效果
+$ brew update
+```
+
+其他的源：
+
+```
+https://git.coding.net/homebrew/homebrew.git - Coding
+https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/brew.git - 清华
+https://mirrors.ustc.edu.cn/brew.git - 中科大
+```
 
 
 
